grate: initial gallium driver for NVIDIA Tegra
Add a stub Gallium driver for NVIDIA Tegra SoCs to serve as a basis for
future development.

Signed-off-by: Thierry Reding <thierry.reding@avionic-design.de>
Signed-off-by: Dmitry Osipenko <digetx@gmail.com>
Signed-off-by: Nicolas Chauvet <kwizart@gmail.com>
Signed-off-by: Erik Faye-Lund <kusmabite@gmail.com>

--- a/src/gallium/Makefile.am
+++ b/src/gallium/Makefile.am
@@ -89,6 +89,11 @@ if HAVE_GALLIUM_SWR
 SUBDIRS += drivers/swr
 endif
 
+## grate
+if HAVE_GALLIUM_GRATE
+SUBDIRS += drivers/grate winsys/grate/drm
+endif
+
 ## vc4/rpi
 if HAVE_GALLIUM_VC4
 SUBDIRS += drivers/vc4 winsys/vc4/drm
