tegra: texture boiler-plate

--- a/src/gallium/drivers/tegra/Makefile.am
+++ b/src/gallium/drivers/tegra/Makefile.am
@@ -38,6 +38,8 @@ libtegra_la_SOURCES = \
 	tegra_stream.h \
 	tegra_surface.c \
 	tegra_surface.h \
+	tegra_texture.c \
+	tegra_texture.h \
 	vpe_ir.c \
 	vpe_ir.h
 
